cert-manager-deployment/nginx-ingress.yaml
---
# Supported annotations
# https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.7/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pf-api
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: http-01-production
spec:
  ingressClassName: external-nginx
  rules:
    - host: eks.thepumpfactory.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pf-api
                port:
                  number: 3000
  tls:
    - hosts:
        - eks.thepumpfactory.net
      secretName: pf-api-tls
